[fix]#8243 align elements on workspace

--- a/css/modules.less
+++ b/css/modules.less
@@ -1777,6 +1777,7 @@ textarea:focus{
 		width: 117px;
 		height: 117px;
 		overflow: hidden!important;
+		vertical-align: top;
 		transition: background .25s ease;
 		&.selected{
 			background-color: @primary-light;
